--- a/rura-codegen/Cargo.toml
+++ b/rura-codegen/Cargo.toml
@@ -6,3 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+proc-macro2 = "1.0.78"
+quote = "1.0.35"
+rura-core = { path = "../rura-core" }
+
+[dev-dependencies]
+prettyplease = "0.2.16"
+syn = "2.0.48"
