--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,7 +20,7 @@ jobs:
       - name: Run rustfmt
         run: cargo fmt --all -- --check
       - name: Run clippy
-        run: cargo clippy --all
+        run: cargo clippy --all -- -D warnings
       - name: Build
         run: cargo build --release --verbose
       - name: Run debug tests
