--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "2"
-members = ["rura-core", "rura-runtime", "rura-internal-macros", "rura-codegen", "rura-grammar", "rura-typings"]
+members = ["rura-core", "rura-runtime", "rura-internal-macros", "rura-codegen", "rura-grammar", "rura-typing"]
