--- a/rura-codegen/Cargo.toml
+++ b/rura-codegen/Cargo.toml
@@ -10,7 +10,10 @@ proc-macro2 = "1.0.78"
 quote = "1.0.35"
 rura-core = { path = "../rura-core" }
 unicode-ident = "1.0.12"
-winnow = { version = "0.6.1", features = ["simd"] }
+winnow = { version = "0.6.1" }
+
+[features]
+winnow-simd = ["winnow/simd"]
 
 [dev-dependencies]
 prettyplease = "0.2.16"
