[lir] add more pprint

--- a/rura-codegen/Cargo.toml
+++ b/rura-codegen/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [features]
 winnow-simd = ["winnow/simd"]
+winnow-debug = ["winnow/debug"]
 
 [dependencies]
 proc-macro2 = "1.0.78"
