[lir] add analysis structure

--- a/rura-lir/Cargo.toml
+++ b/rura-lir/Cargo.toml
@@ -12,6 +12,7 @@ proc-macro2 = "1.0.78"
 quote = "1.0.35"
 winnow = "0.6.2"
 thiserror = "1.0.57"
+serde_json = "1.0.114"
 
 [dependencies.rura-parsing]
 path = "../rura-parsing"
