--- a/rura-lir/Cargo.toml
+++ b/rura-lir/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [features]
 winnow-simd = ["winnow/simd"]
 winnow-debug = ["winnow/debug"]
+colorful-diagnostic = ["dep:nu-ansi-term"]
 
 [dependencies]
 proc-macro2 = "1.0.78"
@@ -13,6 +14,7 @@ quote = "1.0.35"
 winnow = "0.6.2"
 thiserror = "1.0.57"
 serde_json = "1.0.114"
+nu-ansi-term = { version = "0.50.0", optional = true }
 
 [dependencies.rura-parsing]
 path = "../rura-parsing"
