--- a/rura-core/Cargo.toml
+++ b/rura-core/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 winnow = "0.6.2"
 proc-macro2 = "1.0.78"
 quote = "1.0.35"
+lexpr = "0.2.7"
 
 [dependencies.serde]
 version = "1.0.197"
