--- a/rura-lir/Cargo.toml
+++ b/rura-lir/Cargo.toml
@@ -11,6 +11,7 @@ colorful-diagnostic = ["dep:nu-ansi-term"]
 [dependencies]
 winnow = "0.6.2"
 thiserror = "1.0.57"
+lexpr = "0.2.7"
 
 [dependencies.nu-ansi-term]
 version = "0.50.0"
