--- a/rura-core/Cargo.toml
+++ b/rura-core/Cargo.toml
@@ -8,6 +8,7 @@ winnow = "0.6.2"
 proc-macro2 = "1.0.78"
 quote = "1.0.35"
 lexpr = "0.2.7"
+serde-lexpr = "0.1.3"
 
 [dependencies.serde]
 version = "1.0.197"
