--- a/rura-core/Cargo.toml
+++ b/rura-core/Cargo.toml
@@ -9,6 +9,7 @@ proc-macro2 = "1.0.78"
 quote = "1.0.35"
 lexpr = "0.2.7"
 serde-lexpr = "0.1.3"
+thiserror = "1.0.57"
 
 [dependencies.serde]
 version = "1.0.197"
