--- a/rura-lir/Cargo.toml
+++ b/rura-lir/Cargo.toml
@@ -12,6 +12,7 @@ colorful-diagnostic = ["dep:nu-ansi-term"]
 winnow = "0.6.2"
 thiserror = "1.0.57"
 lexpr = "0.2.7"
+toml = "0.8.10"
 
 [dependencies.nu-ansi-term]
 version = "0.50.0"
