[test] fix some bugs via testing
Signed-off-by: Anqur <anqurvanillapy@gmail.com>

--- a/rura-grammar/Cargo.toml
+++ b/rura-grammar/Cargo.toml
@@ -3,6 +3,9 @@ name = "rura-grammar"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+winnow-debug = ["winnow/debug"]
+
 [dependencies]
 winnow = "0.6.2"
 
